--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>comparearea</title>
+    <title>compare diffrent map area</title>
     <link rel="stylesheet" href="comparearea.css?v=4376" />
   </head>
   <body onload="init();">
