--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
     <title>compare diffrent map area</title>
     <link rel="stylesheet" href="comparearea.css?v=4376" />
   </head>
-  <body onload="init();">
+  <body>
     <div id="map0"></div>
     <div id="map1"></div>
     <div id="control">
-<!--
-     <input type="checkbox" checked="checked" id="synchron"/>
-     <input type="text" id="start0" />
-     <input type="text" id="start1" /><br />
--->
-     <button onclick="tosync();">sync</button>
-     <button onclick="desync()" >desync</button>
+     <button id="sync">desync</button>
     </div>
-
+<!--
+    <div id="map-decoration">
+     <span id="customMousePosition"></span>
+     <span id="customZoomLevel">zoom=</span>
+     <span id="customPermalink"><a href="" id="permalink">Permalink</a></span>
+    </div>
+-->
     <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+    <script src="http://code.jquery.com/jquery-1.3.2.min.js" type="text/javascript"></script>
     <script src="comparearea.js"></script>
   </body>
 </html>
