--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>compare diffrent map area</title>
-    <link rel="stylesheet" href="comparearea.css?v=4376" />
+    <link rel="stylesheet" href="comparearea.css?v=1" />
   </head>
   <body>
     <div id="map0"></div>
@@ -18,6 +18,6 @@
 -->
     <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
     <script src="http://code.jquery.com/jquery-1.3.2.min.js" type="text/javascript"></script>
-    <script src="comparearea.js"></script>
+    <script src="comparearea.js?v=1"></script>
   </body>
 </html>
