--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>compare diffrent map area</title>
+    <title>compare different map areas</title>
     <link rel="stylesheet" href="comparearea.css?v=1" />
   </head>
   <body>
@@ -9,15 +9,13 @@
     <div id="control">
      <button id="sync">desync</button>
     </div>
-<!--
     <div id="map-decoration">
      <span id="customMousePosition"></span>
      <span id="customZoomLevel">zoom=</span>
      <span id="customPermalink"><a href="" id="permalink">Permalink</a></span>
     </div>
--->
-    <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
+    <script src="http://www.openlayers.org/api/OpenLayers.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.3.2.min.js" type="text/javascript"></script>
-    <script src="comparearea.js?v=1"></script>
+    <script src="comparearea.js?v=1" type="text/javascript"></script>
   </body>
 </html>
