--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>compare different map areas</title>
     <link rel="stylesheet" href="comparearea.css?v=2" />
+    <link rel="icon" href="areacompare_logo.png" type="image/x-icon">
   </head>
   <body>
     <div id="map0"></div>
