--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>compare different map areas</title>
+    <title>compare different map areas simultaneity</title>
     <link rel="stylesheet" href="comparearea.css?v=2" />
     <link rel="icon" href="areacompare_logo.png" type="image/x-icon">
   </head>
@@ -16,7 +16,7 @@
      <span id="customPermalink"><a href="" id="permalink">Permalink</a></span>
     </div>
     <script src="http://www.openlayers.org/api/OpenLayers.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-1.3.2.min.js" type="text/javascript"></script>
-    <script src="comparearea.js?v=3" type="text/javascript"></script>
+    <script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="comparearea.js?v=4" type="text/javascript"></script>
   </body>
 </html>
