--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>compare different map areas simultaneity</title>
     <link rel="stylesheet" href="comparearea.css?v=2" />
     <link rel="icon" href="areacompare_logo.png" type="image/x-icon">
@@ -12,11 +13,9 @@
     </div>
     <div id="map-decoration">
      <span id="customMousePosition"></span>
-     <span id="customZoomLevel">zoom=</span>
-     <span id="customPermalink"><a href="" id="permalink">Permalink</a></span>
     </div>
     <script src="http://www.openlayers.org/api/OpenLayers.js" type="text/javascript"></script>
     <script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="comparearea.js?v=4" type="text/javascript"></script>
+    <script src="comparearea.js?v=5" type="text/javascript"></script>
   </body>
 </html>
