--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div id="map-decoration">
      <span id="customMousePosition"></span>
     </div>
-    <script src="http://www.openlayers.org/api/OpenLayers.js" type="text/javascript"></script>
-    <script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="//openlayers.org/api/OpenLayers.js" type="text/javascript"></script>
+    <script src="//code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="comparearea.js?v=5" type="text/javascript"></script>
   </body>
 </html>
